<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black"
	android:orientation="vertical">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="100dp"
		android:src="@drawable/icone"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/title"
		android:textColor="@color/white"
		android:textSize="30dp"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/owner"
		android:textColor="@color/white"
		android:textSize="18dp"
		android:padding="10dp"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/version"
		android:textColor="@color/white"
		android:textSize="18dp"
		android:padding="10dp"/>

</LinearLayout>

