<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/relLayout"
	android:orientation="vertical"
	android:background="@color/white">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal">

		<Button
			android:layout_gravity="center"
			android:layout_margin="10dp"
			android:height="40dp"
			android:width="100dp"
			android:layout_height="40dp"
			android:layout_width="match_parent"
			android:text="@string/btn_last"
			android:background="@drawable/borda"
			android:id="@+id/botaoVoltar"/>

		<Button
			android:layout_gravity="center"
			android:layout_margin="10dp"
			android:height="40dp"
			android:width="100dp"
			android:layout_height="40dp"
			android:layout_width="match_parent"
			android:text="@string/btn_next"
			android:background="@drawable/borda"
			android:id="@+id/botaoProximo"/>

		<Button
			android:layout_gravity="center"
			android:layout_margin="10dp"
			android:height="40dp"
			android:width="150dp"
			android:layout_height="40dp"
			android:layout_width="match_parent"
			android:text="@string/play_list"
			android:onClick="playVerse"
			android:background="@drawable/borda"/>

	</LinearLayout>

	<RelativeLayout
		android:layout_height="match_parent"
		android:layout_width="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center|center_vertical|center_horizontal">

		<ListView
			android:id="@+id/lvPessoa"
			android:textStyle="bold"
			style="@style/ListFont"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:divider="@color/blue"
			android:textSize="14sp"
			android:dividerHeight="2dp">

		</ListView>

	</RelativeLayout>

</LinearLayout>

